============
 Condor2Nav
============

Version: 2.1 (WIP)
==================
- LK8000 1.20b support aded (profile file format updated)
- Condor installation path lookout problem fixed
- gotland v1.01 scenery added

Version: 2.0
============
- Condor 1.1.0 registry variables support added
- LK8000 1.20 support aded (task files format updated)
- Support for A types waypoint in a task removed (safety altitude was always taken into account)
- Oahu HD BETA scenery replaced with Oahu HD version 1.0
- AAT tasks support added
- Lacking VS redistributable package problem solved
- FlightPlansPath & RaceResultsPath INI parameters support added
- GUI added (condor2nav-gui.exe)
- CLI application renamed (condor2nav-cli.exe)
- WingArea support added for LK8000 gliders polar files
- Condor GPS configuration setting added
- Case-insensitive scenery name matching implemented
- Scenery maps for LK8000 generated (include DAT terrain and CUP waypoints file)
- Glider maximum speed setting support added for LK8000
- Romania, Alpi3 and WestAlpi sceneries added
- QuickStart documents added to help new users start with the application
- Task WPs naming changed
- Minimum TPs height setting support added

Version: 1.1
============
- INI file variable OutputPath changed from "\My Flash Disk" to "\Storage Card"
- Setting of "SetSystemTimeFromGPS" PRF parameter removed
- South Turkey scenery updated to version 1.1
- LK8000 crash on "BallastSecsToEmpty=0" workaround
- Bug that caused spontanious task file corruptions on PC file system fixed
- Application argument meaning changed - now full path to the FPL file must be provided
- Double '=' sign in Condor FPL file problem solved

Version: 1.0
============
- all gliders speed polars updated

Version: 0.5
============
- Optional WP file generation for XCSoar/LK8000 support added
- LK8000 1.18 support added (task files format updated)
- More task data for start and finish turnpoints now set in PRF file