@@ -34,6 +34,8 @@
 
 namespace condor2nav {
 
+  class CCondor;
+
   /**
    * @brief Condor2Nav GUI interface namespace.
    */
@@ -64,6 +66,7 @@ namespace condor2nav {
       const HWND _hDlg;	                      ///< @brief The dialog handle
       const std::string _condorPath;	      ///< @brief Full pathname of the Condor directory
       const CFileParserINI _configParser;	  ///< @brief The INI file configuration parser
+      std::auto_ptr<CCondor> _condor;         ///< @brief The Condor wrapper
 
       CWidgetRadioButton _fplDefault;	      ///< @brief The default FPL button
       CWidgetRadioButton _fplLastRace;        ///< @brief The last race FPL button
@@ -84,6 +87,7 @@ namespace condor2nav {
       CLogger _warning;                       ///< @brief Warning logging level logger
       CLogger _error;                         ///< @brief Error logging level logger
 
+      void AATCheck() const;
       bool TranslateValid() const;
 
     public:
